<resources>
    <string name="app_name">VideoLib</string>
    <string name="action_settings">Settings</string>
    <string name="details_name">Name: %1$s</string>
    <string name="content_description">Image</string>
    <string name="change_mode">Change mode</string>
    <string name="error">No videos found or some error occurred. \nChange filter parameters and refresh.</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="no_tags">No tags found</string>
    <string name="choose_tags">Choose tags</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="reset_tags">Reset tags</string>
    <string name="apply_tags">Apply tags</string>
    <string name="add">Add</string>
    <string name="filter_videos">Filter videos</string>
    <string name="search">Search</string>
    <string name="any">Any</string>
    <string name="all">All</string>
    <string name="invert_selection">Invert selection</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="delete">Delete</string>
    <string name="select_tags">Select tags</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_tags">Add tags</string>
    <string name="remove_tags">Remove tags</string>
    <string name="import_video">Import video</string>
    <string name="search_by_photos">Search by photo</string>
    <string name="separate_tags">Separate tags by \';\'</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="selected_num_videos">Selected %1$d videos</string>
    <string name="with">with</string>
    <string name="of_tags">of tags:</string>
    <string name="sources">sources</string>
    <string name="name">name</string>
    <string name="string_adding">Adding…</string>
    <string name="import_video_error">Could not add some videos</string>
    <string name="string_import_success">Successfully added</string>
    <string name="string_import_stored">Some videos are already stored</string>
    <string name="add_video">Add video</string>
    <string name="parse">Parse</string>
    <string name="type_video_link">Type video link</string>
    <string name="toast_permission_denied">You need to grant storage access to open videos</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="error_no_videos_found">No videos found</string>
    <string name="please_wait">Please, wait</string>
    <string name="photo_description">Take a photo</string>
    <string name="upload_photo">Upload photo</string>
</resources>
