<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_select_tags"
        android:icon="@drawable/ic_tag_multiple"
        android:title="@string/select_tags"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_select_none"
        android:title="@string/select_none"
        android:icon="@drawable/ic_select_none"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_invert"
        android:title="@string/invert_selection"
        android:icon="@drawable/ic_select_inverse"
        app:showAsAction="ifRoom" />
</menu>