<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_main"
        android:icon="@drawable/ic_add"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/menu_add_video"
        android:icon="@drawable/ic_video_library"
        android:title="@string/add_video" />
    <item
        android:id="@+id/menu_add_tag"
        android:icon="@drawable/tag_add"
        android:title="@string/add_tags" />
    <item
        android:id="@+id/menu_remove_tag"
        android:icon="@drawable/tag_remove"
        android:title="@string/remove_tags" />
    <item
        android:id="@+id/menu_search_by_photo"
        android:icon="@drawable/ic_camera_24dp"
        android:title="@string/search_by_photos" />
</menu>