<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/selector_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/selector_button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selector_recycler"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/selector_button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/selector_text_no_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tags"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/selector_recycler"
        app:layout_constraintEnd_toEndOf="@+id/selector_recycler"
        app:layout_constraintStart_toStartOf="@id/selector_recycler"
        app:layout_constraintTop_toTopOf="@id/selector_recycler" />
</android.support.constraint.ConstraintLayout>