<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/import_window_width"
        android:layout_height="@dimen/import_window_height"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:elevation="@dimen/default_elevation">

        <TextView
            android:id="@+id/text_empty_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tags"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_import"
            app:layout_constraintEnd_toEndOf="@+id/recycler_import"
            app:layout_constraintStart_toStartOf="@+id/recycler_import"
            app:layout_constraintTop_toTopOf="@+id/recycler_import" />

        <TextView
            android:id="@+id/textViewImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_import"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewImport" />

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recycler_import" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/space"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/space" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/fullscreen_blank_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</merge>